# OKN-WOBD

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  competency_questions.md  doxycycline_sfrp2_queries.md  test_preset_queries_usage.md  testing_doxycycline_sfrp2_queries.md  testing_sfrp2_query.md
queries/: count_contenturl_omicsdi.sparql  frink_immport.sparql  immport_by_id.sparql  sample_contenturl_omicsdi.sparql  verify_contenturl_omicsdi.sparql
reports/: excluded_resources_log.json  fetch_summary.json  fetch_summary.md  immport_log.txt  jsonl_fields.md  jsonl_summary.md
scripts/: README.md  build_graph_context.py  build_nde_context.py  list_jsonl_fields.py  run_sparql_query.py  summarize_jsonl.py  test_competency_queries.py  test_doxycycline_sfrp2.py  test_preset_queries.py
web/: README.md  app.py  pyproject.toml
web-v2/: .gitignore  API_KEY_SETUP.md  LLM_SPARQL_GENERATION_TESTING_SUMMARY.md  MULTIHOP_IMPLEMENTATION.md  README.md  TESTING_LLM_SPARQL_GENERATION.md  WIKIDATA_DRUGS.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  setup-env.sh  tailwind.config.ts  test-aspirin-properties.sparql  test-aspirin-to-diseases.sparql  test-aspirin-wikidata.sparql  test-multihop.js  (+2 more)
web/configs/: demo.local.yaml  demo.yaml
web/context/: nde_global.json
web/wobd_web/: __init__.py  config.py  context.py  executor.py  models.py  nl_to_sparql.py  preset_queries.py  router.py
web/wobd_web/gene_expression/: __init__.py  service.py
web/wobd_web/sparql/: __init__.py  client.py  endpoints.py
(+134 files in other folders)
