[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okn-wobd"
version = "0.1.0"
description = "Utilities for interacting with the NIAID data API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9",
    "requests>=2.31,<3",
    "rdflib>=7.0,<8",
    "PyYAML>=6.0.1",
]

[project.scripts]
okn-wobd = "okn_wobd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


