[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wobd-web"
version = "0.1.0"
description = "Streamlit web interface for OKN-WOBD (NL to SPARQL over NDE and related sources)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["wobd_web*"]

